study 페이지 보완

--- a/00_intro/index.html
+++ b/00_intro/index.html
@@ -29,10 +29,10 @@
  <!-- nav>ul#gnb>(li>a[href=#]{MENU0$})*4-->
  <nav>
   <ul id="gnb">
-    <li><a href="#">WORK</a></li>
-    <li><a href="#">PORTPOLIO</a></li>
-    <li><a href="#">STUDY</a></li>
+    <li><a href="#">PUBLISHING WORK</a></li>
     <li><a href="#">DESIGN WORK</a></li>
+    <li><a href="#">PORTPOLIO</a></li>
+    <li><a href="#">SKILL &amp; STUDY</a></li>
     <li><a href="#">WORK FEEDBACK</a></li>
   </ul>
  </nav>
@@ -165,6 +165,52 @@
   </section>   	
 
   <section>
+	<article style="top:20px;">
+		<h4>- IT보안인증사무국 리뉴얼 프로젝트 -<br />(http://itscc.kr 현재 리뉴얼 중)</h4>
+		<dl>
+			<dt>
+				<a href="../03_design_project/itscc_main.html" target="_blank">Main</a>
+			</dt>
+			<dd>메인페이지 디자인 제작</dd>
+		</dl>
+		<dl>
+			<dt>
+				<a href="../03_design_project/itscc_banner.html" target="_blank">Banner</a>
+			</dt>
+			<dd>배너 디자인 제작</dd>
+		</dl>
+		<dl>
+			<dt>
+				<a href="../03_design_project/itscc_map.html" target="_blank">Map</a>
+			</dt>
+			<dd>지도 디자인 제작</dd>
+		</dl>
+		<dl>
+			<dt>
+				<a href="../03_design_project/itscc_logo.html" target="_blank">Logo</a>
+			</dt>
+			<dd>로고 디자인 수정</dd>
+		</dl>
+		
+		<h4>- 제이소프트 로고 제작 -</h4>
+		<dl>
+			<dt>
+				<a href="../03_design_project/j-soft_logo.html" target="_blank">Logo</a>
+			</dt>
+			<dd>로고디자인</dd>
+		</dl>
+		<dl>
+			<dt>
+				<a href="../03_design_project/j-soft_use.html" target="_blank">Use</a>
+			</dt>
+			<dd>실제 사용 모습</dd>
+		</dl>
+	   </article>
+	<img src="img/obj11.png" alt="" class="pic11">
+	<img src="img/obj12.png" alt="" class="pic12">
+   </section>
+     
+  <section>
    <article style="top:50px;">
    	<h4>- 반응형웹 -</h4>
    	<dl>
@@ -224,13 +270,109 @@
   </section>
   
   <section class="section3">
-   <article style="top:0px;">
-   	<h4>- JAVASCRIPT &amp; JQUERY -</h4>
+   <article style="top:40px;">
+	<div class="lr_wrap">
+		<div class="left">
+			<h4>- EDUCATION -</h4>
+			<div class="edu">
+				<p>
+					2015 / 웹퍼블리싱, UI UX<br>
+					2017 / UI제작 향상<br>
+					2019 / React.js, Python 웹프로그래밍<br>
+					2021 / Vue.js와 React.js 활용<br>
+					2023 / React.js 기초 준비하기
+				</p>
+			</div>
+		</div>
+		<div class="right">
+			<h4>- Skill -</h4>
+			<div class="skill">
+				<div class="box">
+					<img src="img/skill/logo_html5.png" alt="">
+					<span>HTML5</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/logo_css3.png" alt="">
+					<span>CSS3</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/logo_sass.png" alt="">
+					<span>SASS</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/logo_js.png" alt="">
+					<span>JAVASCRIPT</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/logo_jquery.png" alt="">
+					<span>JQEURY</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/logo_git.png" alt="">
+					<span>GIT</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/React-icon.svg.png" alt="">
+					<span>REACT</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/Vue.png" alt="">
+					<span>VUE</span>
+				</div>
+			</div>
+			
+			<h4 style="margin-top: 60px;">- Used Tools -</h4>
+			<div class="skill tool">
+				<div class="box">
+					<img src="img/skill/logo_vscode.png" alt="">
+					<span>VS Code</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/128px-Brackets_Icon.svg.png" alt="">
+					<span>Brackets</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/Adobe_Dreamweaver_CC_icon.svg.png" alt="">
+					<span>Dreamweave</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/48px-Eclipse-SVG.svg.png" alt="">
+					<span>Eclipse</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/logo_photoshop.png" alt="">
+					<span>Photoshop</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/logo_zeplin.png" alt="">
+					<span>Zeplin</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/logo_sourcetree.png" alt="">
+					<span>Sourcetree</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/320px-TortoiseGit_logo.svg.png" alt="">
+					<span>Tortoise Git</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/logo_slack.png" alt="">
+					<span>Slack</span>
+				</div>
+				<div class="box">
+					<img src="img/skill/flow.png" alt="">
+					<span>Flow</span>
+				</div>
+			</div>
+		</div>
+	</div>
+
+   	<h4 style="margin-top: 80px;">- Javascript Study -</h4>
    	<dl>
    		<dt>
    			<a href="../02_study/javascript_jquery/new/movie/index.html" target="_blank">Movie</a>
    		</dt>
-   		<dd>마우스의 움직임에 따라 배경 영상 재생</dd>
+   		<dd>마우스 움직임에 따라 배경영상 재생</dd>
    	</dl>
    	<dl>
    		<dt>
@@ -287,7 +429,7 @@
    		<dd>페이드 인 아웃 컨트롤</dd>
    	</dl>
 
-   	<h4>- Layout -</h4>
+   	<h4>- Layout Study-</h4>
    	<dl>
    		<dt>
    			<a href="../02_study/layout/responseWeb/index.html" target="_blank">Response Web</a>
@@ -325,7 +467,7 @@
    		<dd>소셜 커머스 레이아웃</dd>
    	</dl>
 		 
-   	<h4>- Design -</h4>
+   	<h4>- Design Study-</h4>
    	<dl>
    		<dt>
    			<a href="../02_study/design/nike_main.png" target="_blank">Nike</a>
@@ -337,51 +479,7 @@
    <img src="img/obj32.png" alt="" class="pic32">
   </section>
   
-  <section>
-   <article style="top:20px;">
-   	<h4>- IT보안인증사무국 리뉴얼 프로젝트 -<br />(http://itscc.kr 현재 리뉴얼 중)</h4>
-   	<dl>
-   		<dt>
-   			<a href="../03_design_project/itscc_main.html" target="_blank">Main</a>
-   		</dt>
-   		<dd>메인페이지 디자인 제작</dd>
-   	</dl>
-   	<dl>
-   		<dt>
-   			<a href="../03_design_project/itscc_banner.html" target="_blank">Banner</a>
-   		</dt>
-   		<dd>배너 디자인 제작</dd>
-   	</dl>
-   	<dl>
-   		<dt>
-   			<a href="../03_design_project/itscc_map.html" target="_blank">Map</a>
-   		</dt>
-   		<dd>지도 디자인 제작</dd>
-   	</dl>
-   	<dl>
-   		<dt>
-   			<a href="../03_design_project/itscc_logo.html" target="_blank">Logo</a>
-   		</dt>
-   		<dd>로고 디자인 수정</dd>
-   	</dl>
-   	
-   	<h4>- 제이소프트 로고 제작 -</h4>
-   	<dl>
-   		<dt>
-   			<a href="../03_design_project/j-soft_logo.html" target="_blank">Logo</a>
-   		</dt>
-   		<dd>로고디자인</dd>
-   	</dl>
-   	<dl>
-   		<dt>
-   			<a href="../03_design_project/j-soft_use.html" target="_blank">Use</a>
-   		</dt>
-   		<dd>실제 사용 모습</dd>
-   	</dl>
- 	 </article>
-   <img src="img/obj11.png" alt="" class="pic11">
-   <img src="img/obj12.png" alt="" class="pic12">
-  </section>
+
   
     <section class="feedback">
         <article class="tit_center">
