피그마 추가

--- a/00_intro/index.html
+++ b/00_intro/index.html
@@ -340,6 +340,10 @@
 					<span>Eclipse</span>
 				</div>
 				<div class="box">
+					<img src="img/skill/figma.png" alt="">
+					<span>Figma</span>
+				</div>
+				<div class="box">
 					<img src="img/skill/logo_photoshop.png" alt="">
 					<span>Photoshop</span>
 				</div>
