--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/javascript_jquery/new/movie/index.html"
+                href="./02_study/javascript_jquery/new/movie/index.html"
                 target="_blank"
                 >Movie</a
               >
@@ -513,7 +513,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/javascript_jquery/new/fixedHeader1/index.html"
+                href="./02_study/javascript_jquery/new/fixedHeader1/index.html"
                 target="_blank"
                 >Header 1</a
               >
@@ -523,7 +523,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/javascript_jquery/new/fixedHeader2/index.html"
+                href="./02_study/javascript_jquery/new/fixedHeader2/index.html"
                 target="_blank"
                 >Header 2</a
               >
@@ -533,7 +533,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/javascript_jquery/new/tabMenu_1/index.html"
+                href="./02_study/javascript_jquery/new/tabMenu_1/index.html"
                 target="_blank"
                 >Tabs</a
               >
@@ -543,7 +543,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/javascript_jquery/old/analog_clock/index.html"
+                href="./02_study/javascript_jquery/old/analog_clock/index.html"
                 target="_blank"
                 >Analog Watch</a
               >
@@ -553,7 +553,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/javascript_jquery/old/digital_watch/index.html"
+                href="./02_study/javascript_jquery/old/digital_watch/index.html"
                 target="_blank"
                 >Digital Watch</a
               >
@@ -563,7 +563,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/javascript_jquery/old/etc/calculator.html"
+                href="./02_study/javascript_jquery/old/etc/calculator.html"
                 target="_blank"
                 >Calculator</a
               >
@@ -573,7 +573,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/javascript_jquery/old/etc/control_shark.html"
+                href="./02_study/javascript_jquery/old/etc/control_shark.html"
                 target="_blank"
                 >Control Shark</a
               >
@@ -583,7 +583,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/javascript_jquery/old/etc/scroll_image.html"
+                href="./02_study/javascript_jquery/old/etc/scroll_image.html"
                 target="_blank"
                 >Scroll Image</a
               >
@@ -593,7 +593,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/javascript_jquery/old/etc/fadeIn_fadeOut.html"
+                href="./02_study/javascript_jquery/old/etc/fadeIn_fadeOut.html"
                 target="_blank"
                 >Fade In Fade Out</a
               >
@@ -605,7 +605,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/layout/responseWeb/index.html"
+                href="./02_study/layout/responseWeb/index.html"
                 target="_blank"
                 >Response Web</a
               >
@@ -615,7 +615,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/layout/semanticWeb/index.html"
+                href="./02_study/layout/semanticWeb/index.html"
                 target="_blank"
                 >Semantic Web</a
               >
@@ -624,7 +624,7 @@
           </dl>
           <dl>
             <dt>
-              <a href="../02_study/layout/dongbu/index.html" target="_blank"
+              <a href="./02_study/layout/dongbu/index.html" target="_blank"
                 >Dongbu Steel</a
               >
             </dt>
@@ -632,7 +632,7 @@
           </dl>
           <dl>
             <dt>
-              <a href="../02_study/layout/ReNK/index.html" target="_blank"
+              <a href="./02_study/layout/ReNK/index.html" target="_blank"
                 >Re: NK</a
               >
             </dt>
@@ -640,7 +640,7 @@
           </dl>
           <dl>
             <dt>
-              <a href="../02_study/layout/starbucks/index.html" target="_blank"
+              <a href="./02_study/layout/starbucks/index.html" target="_blank"
                 >Starbucks</a
               >
             </dt>
@@ -649,7 +649,7 @@
           <dl>
             <dt>
               <a
-                href="../02_study/layout/social_commerce/index.html"
+                href="./02_study/layout/social_commerce/index.html"
                 target="_blank"
                 >Social Commerce</a
               >
@@ -660,7 +660,7 @@
           <h4>- Design Study-</h4>
           <dl>
             <dt>
-              <a href="../02_study/design/nike_main.png" target="_blank"
+              <a href="./02_study/design/nike_main.png" target="_blank"
                 >Nike</a
               >
             </dt>
