--- a/index.html
+++ b/index.html
@@ -309,8 +309,40 @@
         <img src="./00_intro/img/obj12.png" alt="" class="pic12" />
       </section>
 
-      <section>
+      <section class="section4">
         <article style="top: 3vh">
+          <h4>- React -</h4>
+          <dl>
+            <dt>
+              <a
+                href="https://jacksoneli.github.io/weather-app/index.html"
+                target="_blank"
+                >Weather</a
+              >
+            </dt>
+            <dd>현재 날씨 검색</dd>
+          </dl>
+          <dl>
+            <dt>
+              <a
+                href="https://jacksoneli.github.io/react-homework-230904/index.html"
+                target="_blank"
+                >Date & Time</a
+              >
+            </dt>
+            <dd>현재 날짜와 요일, 시각, 명언</dd>
+          </dl>
+          <dl>
+            <dt>
+              <a
+                href="https://jacksoneli.github.io/react-onepick/index.html"
+                target="_blank"
+                >One Pick</a
+              >
+            </dt>
+            <dd>이상형 월드컵</dd>
+          </dl>
+
           <h4>- 반응형웹 -</h4>
           <dl>
             <dt>
@@ -326,7 +358,7 @@
                 target="_blank"
                 >Sub</a
               >
-              <img src="./00_intro/img/dain.png" alt="" />
+              <img src="./00_intro/img/dain.png" alt="" style="bottom: -350%;" />
             </dt>
             <dd>크로스브라우징 : IE9 이상</dd>
           </dl>
@@ -497,7 +529,7 @@
         <img src="./00_intro/img/obj22.png" alt="" class="pic22" />
       </section>
 
-      <section class="section3">
+      <section class="section2">
         <article style="top: 0px">
           <h4 style="margin-top: 60px">- Javascript Study -</h4>
           <dl>
