--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
               <span>JAVASCRIPT</span>
             </div>
             <div class="box">
-              <img src="./00_intro/img/skill/logo_jquery.png" alt="" />
+              <img src="./00_intro/img/skill/jquery_02.png" alt="" style="width: 40px;" />
               <span>JQEURY</span>
             </div>
             <div class="box">
@@ -469,8 +469,12 @@
               <span>REACT</span>
             </div>
             <div class="box">
-              <img src="./00_intro/img/skill/Vue.png" alt="" />
+              <img src="./00_intro/img/skill/Vue.png" alt="" style="width: 45px;" />
               <span>VUE</span>
+            </div>
+            <div class="box">
+              <img src="./00_intro/img/skill/vite.png" alt="" style="width: 45px;" />
+              <span>VITE</span>
             </div>
           </div>
 
@@ -485,15 +489,16 @@
               <span>Brackets</span>
             </div>
             <div class="box">
-              <img
-                src="./00_intro/img/skill/Adobe_Dreamweaver_CC_icon.svg.png"
-                alt=""
-              />
+              <img src="./00_intro/img/skill/Adobe_Dreamweaver_CC_icon.svg.png" alt="" />
               <span>Dreamweave</span>
             </div>
             <div class="box">
               <img src="./00_intro/img/skill/48px-Eclipse-SVG.svg.png" alt="" />
               <span>Eclipse</span>
+            </div>
+            <div class="box">
+              <img src="./00_intro/img/skill/jenkins.png" alt="" style="width: 60px;" />
+              <span>Jenkins</span>
             </div>
             <div class="box">
               <img src="./00_intro/img/skill/figma.png" alt="" />
